--- a/caps.html
+++ b/caps.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img src="/images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
@@ -26,8 +26,8 @@
         <h2>Individual Peer Counseling</h2>
         <p2>Individual peer counseling is a service provided by CAPS that allows students to talk to other students who are trained to provide support. This service is free and confidential.</p2>
 
-        <img src="/images/Band_Rehearsal.jpg" alt="Band Playing">
-        <img src="/images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="Boy with backpack walking">
+        <img src="images/Band_Rehearsal.jpg" alt="Band Playing">
+        <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="Boy with backpack walking">
     </main>
     <footer>
 
