--- a/caps.html
+++ b/caps.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CAPS</title>
 </head>
 <body>
+    <a href = "">Skip to Main Content</a>
     <header>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
@@ -16,7 +17,7 @@
                 <li><a href = "food_pantry.html">Food Pantry</a></li>
             </ul>
         </nav>
-        <h1>Student Success Portal</h1>
+
 
     </header>
     <main>
@@ -26,11 +27,16 @@
         <h2>Individual Peer Counseling</h2>
         <p2>Individual peer counseling is a service provided by CAPS that allows students to talk to other students who are trained to provide support. This service is free and confidential.</p2>
 
-        <img src="images/Band_Rehearsal.jpg" alt="Band Playing">
-        <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="Boy with backpack walking">
+       <p>Our Front Desk (Michigan Union 4th Floor) is open and ready to help support you -- staff members are available throughout the day to assist you with your needs to answer questions, and get you to the right place. We can be reached by phone at: (734) 764-8312.</p> 
+
+       <img src="images/Michigan_Union.jpg" alt="Picture of the Michigan Union Building">
+
+       <p>Please Note: During high-demand periods, CAPS will be unable to accommodate class-related interviews and/or projects. Many students are able to find the information they need within our website and our annual reports.</p>
+
+        <img src="images/classroom_scene.jpg" alt="Image of an ongoing classroom lecture">
     </main>
     <footer>
-
-    </footer>
+        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
+        </footer>
 </body>
 </html>
