--- a/cew.html
+++ b/cew.html
@@ -38,20 +38,30 @@
             <p>CEW+ provides immediate and ongoing services and the financial support needed to ensure educational success and degree completion. Women+ and underserved students are CEW+’s primary constituency, but all students are welcome. CEW+ also serves those who encounter education and career obstacles based on their non-linear paths to, and experiences within, the University community.</p>
             <p>We proudly support students, faculty, staff, and the surrounding community with:</p>
             <ul>
-                <li>Events + Workshops</li>
-                <li>Funding</li>
-                <li>Counseling</li>
-                <li>Advocacy Initiatives</li>
+                <li> <a href = "https://www.cew.umich.edu/events-workshops/">Events + Workshops</a></li>
+                <li><a href = "https://www.cew.umich.edu/funding/"> Funding</a></li>
+                <li><a href = "https://www.cew.umich.edu/counseling/"> Counseling</a></li>
+                <li><a href = "https://www.cew.umich.edu/advocacy-initiatives/"> Advocay Initiatives</a></li>
             </ul>
             <img src="images/people_talking.jpeg" alt="Image of people talking">
         </div>
 
-        <div></div>
-        <div></div>
+        <div>
+            <h2>History</h2>
+            <p>Established in 1964, the Center for the Education of Women+ was a pioneering university women’s center. Designed to serve the needs of women students as well as women returning to school or work, CEW+ (then known as the Center for the Continuing Education of Women) was founded with a three-part mission of service, advocacy, and research. The Center for the Education of Women+ (now known as CEW+) continues its work today, serving University students, staff and faculty, community members, and all genders, facing education, employment, or other life issues.</p>
+        </div>
+        <div>
+            <h2>THE CEW+ TEAM</h2>
+            <p>Our dedicated team is passionate about helping underserved communities and individuals at the University and beyond thrive.</p>
+            <p><a href="https://www.cew.umich.edu/about/our-team/">Meet Our Team </a></p>
+
+
+        </div>
         <div></div>
     </main>
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
+        <p>CEW+ (Center for the Education of Women+) at the University of Michigan</p>
+            <p>330 E. Liberty Street, Ann Arbor, MI 48104   (734) 764-6360</p>
     </footer>
 
 </body>
