--- a/food_pantry.html
+++ b/food_pantry.html
@@ -8,7 +8,7 @@
 <body>
     <a href = "">Skip to Main Content</a>
     <header>
-        <img src="/images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
@@ -30,6 +30,9 @@
         <img src="images/carrots.jpg" alt="Picture of carrots">
         <img src="images/food_market.jpg" alt= "Picture of shelf of food in store">
 
+        <h2>MAKE AN APPOINTMENT NOW</h2>
+        <p>Shopping at the Maize and Blue Cupboard is by appointment only.  Please make an appointment by visiting our sign up page <a href = "https://calendly.com/mbcappointments/mbc-shopping-appointments?month=2024-09">here. </a></p>
+
         <h2>LOCATION</h2>
         <P>Located in the basement of the Betsy Barbour Residence Hall, please enter via the Maynard entrance only to ensure privacy for residents. Please contact us if you need ramp or elevator access.</P>
 
@@ -37,7 +40,7 @@
         <P>Phone: 734-936-2794</P>
 
         <h2>HOURS</h2>
-        <p>On Monday 10/30 the Maize and Blue Cupboard will transition to shopping by appointment only. Schedule your shopping appointment here.</p>
+        <p>On Monday 10/30 the Maize and Blue Cupboard will transition to shopping by appointment only. Schedule your shopping appointment <a href = "https://calendly.com/mbcappointments/mbc-shopping-appointments?month=2024-09">here. </a></p>
 
     </main>
     <footer>
