--- a/caps.html
+++ b/caps.html
@@ -24,10 +24,18 @@
         <h1> Welcome to Counseling and Psychological Services (CAPS)</h1>
         <p1>We are happy to offer both in-person and virtual services. CAPS is committed to creating an environment based on our values of multicultural, multi-disciplinary and multi-theoretical practices that allow our diverse student body to access care, receive high quality services and take positive pathways to mental health.</p1>
 
-        <h2>Individual Peer Counseling</h2>
+        <p>CAPS has a limited number of private spaces available for students to connect with their counselor via telecounseling. Please contact the front desk for more information on those private spaces.</p>
+
+        <h2> <a href= "https://caps.umich.edu/individual-peer-counseling">Individual Peer Counseling</a></h2>
         <p2>Individual peer counseling is a service provided by CAPS that allows students to talk to other students who are trained to provide support. This service is free and confidential.</p2>
 
-       <p>Our Front Desk (Michigan Union 4th Floor) is open and ready to help support you -- staff members are available throughout the day to assist you with your needs to answer questions, and get you to the right place. We can be reached by phone at: (734) 764-8312.</p> 
+        <h2> <a href= "https://caps.umich.edu/article/uwill-teletherapy-services">Uwill Teletherapy Services</a></h2>
+        <p> Uwill is an addition to CAPS services that provides students with video, phone, chat, and message sessions with licensed mental health professionals at no cost. This additional counseling option offers students greater flexibility and allows CAPS to expand its service capacity.</p>
+
+        <h2> <a href= "https://caps.umich.edu/article/scope-services">Scope of Services</a></h2>
+        <p>In support of the educational goals of the University and the Division of Student Life, Counseling and Psychological Services (CAPS) provides a range of clinical, preventative, and training services consistent with the practices and standards of a nationally accredited university counseling center. CAPS is committed to creating a safe and supportive environment based on our multicultural, multi-disciplinary and multi-theoretical values and practices that allow our diverse student body to access care, to receive high quality services, and to take positive pathways to mental health.</p>
+
+       <p>Our Front Desk (Michigan Union 4th Floor) is open and ready to help support you -- staff members are available throughout the day to assist you with your needs to answer questions, and get you to the right place. We can be reached by phone at: (734) 764-8312.</p>
 
        <img src="images/Michigan_Union.jpg" alt="Picture of the Michigan Union Building">
 
@@ -36,7 +44,11 @@
         <img src="images/classroom_scene.jpg" alt="Image of an ongoing classroom lecture">
     </main>
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
+        <p>University Health & Counseling:</p>
+            <p>CAPS Counseling and Psychological Services</p>
+            <p>Michigan Union, Suite 4079</p>
+            <p>530 South State Street</p>
+            <p>Ann Arbor, MI 48109</p>
         </footer>
 </body>
 </html>
