--- a/caps.html
+++ b/caps.html
@@ -6,7 +6,7 @@
     <title>CAPS</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href = "#main">Skip to Main Content</a>
     <header>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
