--- a/caps.html
+++ b/caps.html
@@ -6,7 +6,7 @@
     <title>CAPS</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
+    <a href = "#main-content">Skip to Main Content</a>
     <header>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
@@ -20,7 +20,7 @@
 
 
     </header>
-    <main>
+    <main id="main-content">
         <h1> Welcome to Counseling and Psychological Services (CAPS)</h1>
         <p1>We are happy to offer both in-person and virtual services. CAPS is committed to creating an environment based on our values of multicultural, multi-disciplinary and multi-theoretical practices that allow our diverse student body to access care, receive high quality services and take positive pathways to mental health.</p1>
 
