--- a/cew.html
+++ b/cew.html
@@ -6,7 +6,7 @@
     <title>CEW</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
+    <a href = "#main-content">Skip to Main Content</a>
     <header>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
@@ -20,7 +20,7 @@
         <h1>CENTER FOR THE EDUCATION OF WOMEN +</h1>
 
     </header>
-    <main>
+    <main id="main-content">
         <div>
             <p>At CEW+, we navigate circumstantial barriers by providing academic, financial, and professional support to help you reach your personal potential. Established to support women through higher education, we lift up women and all underserved communities at U-M and beyond. Through career and education counseling, funding, workshops, events, and a diverse, welcoming community, we exist to empower. We are CEW+, and we are here to help you reach your potential.</p>
         </div>
