--- a/food_pantry.html
+++ b/food_pantry.html
@@ -6,7 +6,7 @@
     <title>Food Pantry</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
+    <a href = "#main-content">Skip to Main Content</a>
     <header>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
@@ -20,7 +20,7 @@
 
 
     </header>
-    <main>
+    <main id="main-content">
         <h1>WELCOME TO MAIZE & BLUE CUPBOARD</h1>
         <h2>OUR MISSION</h2>
         <p>To ensure members of the University of Michigan community—whether on a tight budget or physically restrained from getting to a grocery store—receive equitable access to healthy, nutritious, and nourishing food and the ability to prepare it for themselves or others.</p>
