--- a/caps.html
+++ b/caps.html
@@ -22,12 +22,12 @@
     </header>
     <main id="main-content">
         <h1> Welcome to Counseling and Psychological Services (CAPS)</h1>
-        <p1>We are happy to offer both in-person and virtual services. CAPS is committed to creating an environment based on our values of multicultural, multi-disciplinary and multi-theoretical practices that allow our diverse student body to access care, receive high quality services and take positive pathways to mental health.</p1>
+        <p>We are happy to offer both in-person and virtual services. CAPS is committed to creating an environment based on our values of multicultural, multi-disciplinary and multi-theoretical practices that allow our diverse student body to access care, receive high quality services and take positive pathways to mental health.</p>
 
         <p>CAPS has a limited number of private spaces available for students to connect with their counselor via telecounseling. Please contact the front desk for more information on those private spaces.</p>
 
         <h2> <a href= "https://caps.umich.edu/individual-peer-counseling">Individual Peer Counseling</a></h2>
-        <p2>Individual peer counseling is a service provided by CAPS that allows students to talk to other students who are trained to provide support. This service is free and confidential.</p2>
+        <p>Individual peer counseling is a service provided by CAPS that allows students to talk to other students who are trained to provide support. This service is free and confidential.</p>
 
         <h2> <a href= "https://caps.umich.edu/article/uwill-teletherapy-services">Uwill Teletherapy Services</a></h2>
         <p> Uwill is an addition to CAPS services that provides students with video, phone, chat, and message sessions with licensed mental health professionals at no cost. This additional counseling option offers students greater flexibility and allows CAPS to expand its service capacity.</p>
