--- a/cew.html
+++ b/cew.html
@@ -3,67 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>CEW</title>
 </head>
 <body>
-    <a href = "#main-content">Skip to Main Content</a>
+    <div tabindex="0" class="skip"><a href="#main">Skip to Main Content</a></div>
     <header>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "caps.html">CAPS</a></li>
-                <li><a href = "cew.html">CEW</a></li>
-                <li><a href = "food_pantry.html">Food Pantry</a></li>
+        <div class="logo-container">
+            <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo" class="logo">
+        </div>
+        <nav class="nav-container">
+            <ul class="nav-list">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="caps.html" class="nav-link">CAPS</a></li>
+                <li><a href="cew.html" class="nav-link active">CEW</a></li>
+                <li><a href="food_pantry.html" class="nav-link">Food Pantry</a></li>
             </ul>
         </nav>
         <h1>CENTER FOR THE EDUCATION OF WOMEN +</h1>
-
     </header>
-    <main id="main-content">
-        <div>
+    <main class="container" id="main">
+        <section>
             <p>At CEW+, we navigate circumstantial barriers by providing academic, financial, and professional support to help you reach your personal potential. Established to support women through higher education, we lift up women and all underserved communities at U-M and beyond. Through career and education counseling, funding, workshops, events, and a diverse, welcoming community, we exist to empower. We are CEW+, and we are here to help you reach your potential.</p>
-        </div>
+        </section>
 
-<div>
-    <h2>About Us</h2>
-    <p>CEW+ empowers women+ and underserved individuals in the University of Michigan and surrounding communities by serving as an advocate and providing resources to help individuals reach their academic, financial, and professional potential.</p>
-    <img src="images/cew_logo.png" alt="CEW+ Logo">
-</div>
+        <section>
+            <h2>About Us</h2>
+            <p>CEW+ empowers women+ and underserved individuals in the University of Michigan and surrounding communities by serving as an advocate and providing resources to help individuals reach their academic, financial, and professional potential.</p>
+            <img src="images/cew_logo.png" alt="CEW+ Logo">
+        </section>
 
-            <!-- Jackie Wolf -->
-
-        <div>
+        <section>
             <h2>WHAT WE DO</h2>
             <p>CEW+ provides immediate and ongoing services and the financial support needed to ensure educational success and degree completion. Women+ and underserved students are CEW+’s primary constituency, but all students are welcome. CEW+ also serves those who encounter education and career obstacles based on their non-linear paths to, and experiences within, the University community.</p>
             <p>We proudly support students, faculty, staff, and the surrounding community with:</p>
             <ul>
-                <li> <a href = "https://www.cew.umich.edu/events-workshops/">Events + Workshops</a></li>
-                <li><a href = "https://www.cew.umich.edu/funding/"> Funding</a></li>
-                <li><a href = "https://www.cew.umich.edu/counseling/"> Counseling</a></li>
-                <li><a href = "https://www.cew.umich.edu/advocacy-initiatives/"> Advocay Initiatives</a></li>
+                <li><a href="https://www.cew.umich.edu/events-workshops/">Events + Workshops</a></li>
+                <li><a href="https://www.cew.umich.edu/funding/">Funding</a></li>
+                <li><a href="https://www.cew.umich.edu/counseling/">Counseling</a></li>
+                <li><a href="https://www.cew.umich.edu/advocacy-initiatives/">Advocacy Initiatives</a></li>
             </ul>
             <img src="images/people_talking.jpeg" alt="Image of people talking">
-        </div>
+        </section>
 
-        <div>
+        <section>
             <h2>History</h2>
             <p>Established in 1964, the Center for the Education of Women+ was a pioneering university women’s center. Designed to serve the needs of women students as well as women returning to school or work, CEW+ (then known as the Center for the Continuing Education of Women) was founded with a three-part mission of service, advocacy, and research. The Center for the Education of Women+ (now known as CEW+) continues its work today, serving University students, staff and faculty, community members, and all genders, facing education, employment, or other life issues.</p>
-        </div>
-        <div>
+        </section>
+
+        <section>
             <h2>THE CEW+ TEAM</h2>
             <p>Our dedicated team is passionate about helping underserved communities and individuals at the University and beyond thrive.</p>
-            <p><a href="https://www.cew.umich.edu/about/our-team/">Meet Our Team </a></p>
-
-
-        </div>
-        <div></div>
+            <p><a href="https://www.cew.umich.edu/about/our-team/">Meet Our Team</a></p>
+        </section>
     </main>
     <footer>
         <p>CEW+ (Center for the Education of Women+) at the University of Michigan</p>
-            <p>330 E. Liberty Street, Ann Arbor, MI 48104   (734) 764-6360</p>
+        <p>330 E. Liberty Street, Ann Arbor, MI 48104 (734) 764-6360</p>
     </footer>
-
 </body>
-
 </html>
