--- a/food_pantry.html
+++ b/food_pantry.html
@@ -3,48 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Food Pantry</title>
 </head>
 <body>
-    <a href = "#main-content">Skip to Main Content</a>
+    <div tabindex="0" class="skip"><a href="#main">Skip to Main Content</a></div>
     <header>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "caps.html">CAPS</a></li>
-                <li><a href = "cew.html">CEW</a></li>
-                <li><a href = "food_pantry.html">Food Pantry</a></li>
+        <div class="logo-container">
+            <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo" class="logo">
+        </div>
+        <nav class="nav-container">
+            <ul class="nav-list">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="caps.html" class="nav-link">CAPS</a></li>
+                <li><a href="cew.html" class="nav-link">CEW</a></li>
+                <li><a href="food_pantry.html" class="nav-link active">Food Pantry</a></li>
             </ul>
         </nav>
-
-
-    </header>
-    <main id="main-content">
         <h1>WELCOME TO MAIZE & BLUE CUPBOARD</h1>
-        <h2>OUR MISSION</h2>
-        <p>To ensure members of the University of Michigan community—whether on a tight budget or physically restrained from getting to a grocery store—receive equitable access to healthy, nutritious, and nourishing food and the ability to prepare it for themselves or others.</p>
+    </header>
+    <main class="container" id="main">
+        <section>
+            <h2>OUR MISSION</h2>
+            <p>To ensure members of the University of Michigan community—whether on a tight budget or physically restrained from getting to a grocery store—receive equitable access to healthy, nutritious, and nourishing food and the ability to prepare it for themselves or others.</p>
+        </section>
 
-        <h2>WHO WE ARE</h2>
-        <p>College students and staff are experiencing food insecurity at alarming rates. The Maize and Blue Cupboard is here to provide an immediate and comprehensive response for the U-M community. By offering resources, educational opportunities, compassionate support and more, we help students develop the skills to make informed decisions.</p>
-        <img src="images/carrots.jpg" alt="Picture of carrots">
-        <img src="images/food_market.jpg" alt= "Picture of shelf of food in store">
+        <section>
+            <h2>WHO WE ARE</h2>
+            <p>College students and staff are experiencing food insecurity at alarming rates. The Maize and Blue Cupboard is here to provide an immediate and comprehensive response for the U-M community. By offering resources, educational opportunities, compassionate support and more, we help students develop the skills to make informed decisions.</p>
+            <figure>
+                <img src="images/carrots.jpg" alt="Picture of carrots">
+            </figure>
+            <figure>
+                <img src="images/food_market.jpg" alt="Picture of shelf of food in store">
+            </figure>
+        </section>
 
-        <h2>MAKE AN APPOINTMENT NOW</h2>
-        <p>Shopping at the Maize and Blue Cupboard is by appointment only.  Please make an appointment by visiting our sign up page <a href = "https://calendly.com/mbcappointments/mbc-shopping-appointments?month=2024-09">here. </a></p>
+        <section>
+            <h2>MAKE AN APPOINTMENT NOW</h2>
+            <p>Shopping at the Maize and Blue Cupboard is by appointment only. Please make an appointment by visiting our sign-up page <a href="https://calendly.com/mbcappointments/mbc-shopping-appointments?month=2024-09">here.</a></p>
+        </section>
 
-        <h2>LOCATION</h2>
-        <P>Located in the basement of the Betsy Barbour Residence Hall, please enter via the Maynard entrance only to ensure privacy for residents. Please contact us if you need ramp or elevator access.</P>
+        <section>
+            <h2>LOCATION</h2>
+            <p>Located in the basement of the Betsy Barbour Residence Hall, please enter via the Maynard entrance only to ensure privacy for residents. Please contact us if you need ramp or elevator access.</p>
+            <p>Address: 420 S State St Ann Arbor, MI 48109</p>
+            <p>Phone: 734-936-2794</p>
+        </section>
 
-        <p>Address: 420 S State St Ann Arbor, MI 48109</p>
-        <P>Phone: 734-936-2794</P>
-
-        <h2>HOURS</h2>
-        <p>On Monday 10/30 the Maize and Blue Cupboard will transition to shopping by appointment only. Schedule your shopping appointment <a href = "https://calendly.com/mbcappointments/mbc-shopping-appointments?month=2024-09">here. </a></p>
-
+        <section>
+            <h2>HOURS</h2>
+            <p>On Monday 10/30, the Maize and Blue Cupboard will transition to shopping by appointment only. Schedule your shopping appointment <a href="https://calendly.com/mbcappointments/mbc-shopping-appointments?month=2024-09">here.</a></p>
+        </section>
     </main>
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
-        </footer>
+        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising</a></p>
+    </footer>
 </body>
 </html>
