--- a/cew.html
+++ b/cew.html
@@ -15,10 +15,10 @@
         </div>
         <nav class="nav-container">
             <ul class="nav-list">
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="caps.html" class="nav-link">CAPS</a></li>
-                <li><a href="cew.html" class="nav-link active">CEW</a></li>
-                <li><a href="food_pantry.html" class="nav-link">Food Pantry</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="caps.html">CAPS</a></li>
+                <li><a href="cew.html" class="active">CEW</a></li>
+                <li><a href="food_pantry.html">Food Pantry</a></li>
             </ul>
         </nav>
         <h1>CENTER FOR THE EDUCATION OF WOMEN +</h1>
