--- a/food_pantry.html
+++ b/food_pantry.html
@@ -15,10 +15,10 @@
         </div>
         <nav class="nav-container">
             <ul class="nav-list">
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="caps.html" class="nav-link">CAPS</a></li>
-                <li><a href="cew.html" class="nav-link">CEW</a></li>
-                <li><a href="food_pantry.html" class="nav-link active">Food Pantry</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="caps.html">CAPS</a></li>
+                <li><a href="cew.html">CEW</a></li>
+                <li><a href="food_pantry.html" class="active">Food Pantry</a></li>
             </ul>
         </nav>
         <h1>WELCOME TO MAIZE & BLUE CUPBOARD</h1>
