--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="nav-container">
         <ul class="nav-list">
 
-                <li><a href = "index.html">Home</a></li>
+                <li><a href = "index.html" class="active">Home</a></li>
                 <li><a href = "caps.html">CAPS</a></li>
                 <li><a href = "cew.html">CEW</a></li>
                 <li><a href = "food_pantry.html">Food Pantry</a></li>
