--- a/caps.html
+++ b/caps.html
@@ -50,13 +50,22 @@
             <p>Please Note: During high-demand periods, CAPS will be unable to accommodate class-related interviews and/or projects. Many students are able to find the information they need within our website and our annual reports.</p>
             <img src="images/classroom_scene.jpg" alt="Image of an ongoing classroom lecture">
         </section>
+        <section>
+            <h2>Location</h2>
+            <p>University Health & Counseling:</p>
+            <p>CAPS Counseling and Psychological Services</p>
+            <p>Michigan Union, Suite 4079</p>
+            <p>530 South State Street</p>
+            <p>Ann Arbor, MI 48109</p>
+        </section>
     </main>
+
     <footer>
-        <p>University Health & Counseling:</p>
-        <p>CAPS Counseling and Psychological Services</p>
-        <p>Michigan Union, Suite 4079</p>
-        <p>530 South State Street</p>
-        <p>Ann Arbor, MI 48109</p>
-    </footer>
+        <p>&copy; 2024 University of Michigan. All rights reserved.</p>
+        <p>University of Michigan<br>
+           530 South State Street<br>
+           Ann Arbor, MI 48109<br>
+           Phone: (734) 764-1817</p>
+</footer>
 </body>
 </html>
