--- a/cew.html
+++ b/cew.html
@@ -57,10 +57,20 @@
             <p>Our dedicated team is passionate about helping underserved communities and individuals at the University and beyond thrive.</p>
             <p><a href="https://www.cew.umich.edu/about/our-team/">Meet Our Team</a></p>
         </section>
+
+        <section>
+            <h2>CONTACT US</h2>
+            <p>330 E. Liberty Street<br>
+                Ann Arbor, MI 48104<br>
+                (734) 764-6360</p>
+        </section>
     </main>
     <footer>
-        <p>CEW+ (Center for the Education of Women+) at the University of Michigan</p>
-        <p>330 E. Liberty Street, Ann Arbor, MI 48104 (734) 764-6360</p>
+                <p>&copy; 2024 University of Michigan. All rights reserved.</p>
+                <p>University of Michigan<br>
+                   530 South State Street<br>
+                   Ann Arbor, MI 48109<br>
+                   Phone: (734) 764-1817</p>
     </footer>
 </body>
 </html>
