--- a/food_pantry.html
+++ b/food_pantry.html
@@ -58,7 +58,11 @@
         </section>
     </main>
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising</a></p>
-    </footer>
+        <p>&copy; 2024 University of Michigan. All rights reserved.</p>
+        <p>University of Michigan<br>
+           530 South State Street<br>
+           Ann Arbor, MI 48109<br>
+           Phone: (734) 764-1817</p>
+</footer>
 </body>
 </html>
