--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
         UMGPT. (2024). UMGPT (August 29th version) [Large language model]. -->
     </main>
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
-        </footer>
+        <p>&copy; 2024 University of Michigan. All rights reserved.</p>
+        <p>University of Michigan<br>
+           530 South State Street<br>
+           Ann Arbor, MI 48109<br>
+           Phone: (734) 764-1817</p>
+</footer>
 </body>
 </html>
